--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,33 @@
-<h2 id="title">Welcome to Ember</h2>
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">The Scheduler</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        {{#link-to "index" tagName="li" href=false}}
+          {{#link-to "index"}}<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedule{{/link-to}}
+        {{/link-to}}
+        {{#link-to "people" tagName="li" href=false}}
+          {{#link-to "people"}}<span class="glyphicon glyphicon-user" aria-hidden="true"></span> People{{/link-to}}
+        {{/link-to}}
+        {{#link-to "settings" tagName="li" href=false}}
+          {{#link-to "settings"}}<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings{{/link-to}}
+        {{/link-to}}
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
 
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div> <!-- /container -->
