Got weekday select fields working

--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -5,22 +5,18 @@
   <div class="form-group">
     <label>Midweek meeting is on</label>
     <select class="form-control">
-      {{#each-in ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'] as |day|}}
-        {{debugger}}
-      {{/each-in}}
+      {{#each week-days as |day index|}}
+        <option value="{{day}}" selected="{{if (eq model.midweek_meeting day) 'selected'}}">{{day}}</option>
+      {{/each}}
     </select>
   </div>
 
   <div class="form-group">
     <label>Weekend meeting is on</label>
     <select class="form-control">
-      <option>Monday</option>
-      <option>Tuesday</option>
-      <option>Wednesday</option>
-      <option>Thursday</option>
-      <option>Friday</option>
-      <option>Saturday</option>
-      <option>Sunday</option>
+      {{#each week-days as |day index|}}
+        <option value="{{day}}" selected="{{if (eq model.weekend_meeting day) 'selected'}}">{{day}}</option>
+      {{/each}}
     </select>
   </div>
 </form>
