--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <h1>
   <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedule
-  <button type="button" class="btn btn-primary">Generate</button>
+  <button type="button" class="btn btn-primary pull-right">Generate Schedule</button>
 </h1>
 
 {{outlet}}
