--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,4 +3,19 @@
   <button type="button" class="btn btn-primary pull-right">Generate Schedule</button>
 </h1>
 
+{{#if model}}
+<table class="table">
+    <thead>
+      <tr>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+    {{#each model as |date|}}
+      <tr><td>{{date.date}}</td></tr>
+    {{/each}}
+    </tbody>
+</table>
+{{/if}}
+
 {{outlet}}
