Saving progress on groups

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -20,6 +20,9 @@
         {{#link-to "people" tagName="li" href=false}}
           {{#link-to "people"}}<span class="glyphicon glyphicon-user" aria-hidden="true"></span> People{{/link-to}}
         {{/link-to}}
+        {{#link-to "groups" tagName="li" href=false}}
+          {{#link-to "groups"}}<span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Groups{{/link-to}}
+        {{/link-to}}
         {{#link-to "settings" tagName="li" href=false}}
           {{#link-to "settings"}}<span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings{{/link-to}}
         {{/link-to}}
