updates for saving groups and defaults for meeting days

--- a/app/templates/groups.hbs
+++ b/app/templates/groups.hbs
@@ -1,6 +1,6 @@
 <h1>
   <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Groups
-  <button type="button" class="btn btn-primary pull-right">Add Group</button>
+  <a href="/group/new" class="btn btn-primary pull-right">Add Group</a>
 </h1>
 
 {{#if model}}
