--- a/app/templates/group.hbs
+++ b/app/templates/group.hbs
@@ -5,8 +5,9 @@
 <form>
   <div class="form-group">
     <label>Name</label>
-    {{input type="text" value=name}}
+    {{input type="text" value=model.name}}
   </div>
+  <button {{action "save"}} type="submit" class="btn btn-primary">Add</button>
 </form>
 
 {{outlet}}
