--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -19,7 +19,9 @@
       {{/each}}
     </select>
   </div>
-  <div class="form-group pull-right"><button {{action "save"}} type="submit" class="btn btn-primary">Save</button></div>
+  <div class="form-group">
+    <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
+  </div>
 </form>
 
 {{outlet}}
