--- a/app/templates/person.hbs
+++ b/app/templates/person.hbs
@@ -1,1 +1,13 @@
+<h1>
+  <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Edit Person
+</h1>
+
+<form>
+  <div class="form-group">
+    <label for="name">Name</label>
+    {{input type="text" class="form-control" id="name" value=model.name}}
+  </div>
+  <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
+</form>
+
 {{outlet}}
