--- a/app/templates/group.hbs
+++ b/app/templates/group.hbs
@@ -8,6 +8,7 @@
     {{input type="text" class="form-control" id="name" value=model.name}}
   </div>
   <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
+  <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
 </form>
 
 {{outlet}}
