--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -21,6 +21,7 @@
   </div>
   <div class="form-group">
     <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
+    <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
   </div>
 </form>
 
