--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -3,19 +3,19 @@
 <h2>Meeting Dates</h2>
 <form>
   <div class="form-group">
-    <label>Midweek meeting is on</label>
-    <select class="form-control" onchange={{action "changeMidweekMeeting" value="target.value"}}>
+    <label for="midweek-meeting">Midweek meeting is on</label>
+    <select class="form-control" id="midweek-meeting" onchange={{action "changeMidweekMeeting" value="target.value"}}>
       {{#each weekdays as |day index|}}
-        <option value="{{day}}" selected="{{if (eq model.midweek_meeting day) 'selected'}}">{{day}}</option>
+        <option value="{{day}}" selected="{{if (eq model.midweekMeeting day) 'selected'}}">{{day}}</option>
       {{/each}}
     </select>
   </div>
 
   <div class="form-group">
-    <label>Weekend meeting is on</label>
-    <select class="form-control" onchange={{action "changeWeekendMeeting" value="target.value"}}>
+    <label for="weekend-meeting">Weekend meeting is on</label>
+    <select class="form-control" id="weekend-meeting" onchange={{action "changeWeekendMeeting" value="target.value"}}>
       {{#each weekdays as |day index|}}
-        <option value="{{day}}" selected="{{if (eq model.weekend_meeting day) 'selected'}}">{{day}}</option>
+        <option value="{{day}}" selected="{{if (eq model.weekendMeeting day) 'selected'}}">{{day}}</option>
       {{/each}}
     </select>
   </div>
