--- a/app/templates/group.hbs
+++ b/app/templates/group.hbs
@@ -7,8 +7,10 @@
     <label for="name">Name</label>
     {{input type="text" class="form-control" id="name" value=model.name}}
   </div>
-  <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
-  <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
+  <div class="form-group">
+    <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
+    <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
+  </div>
 </form>
 
 {{outlet}}
