--- a/app/templates/person.hbs
+++ b/app/templates/person.hbs
@@ -7,8 +7,41 @@
     <label for="name">Name</label>
     {{input type="text" class="form-control" id="name" value=model.name}}
   </div>
-  <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
-  <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
+  <div class="form-group">
+    <label for="email">Email</label>
+    {{input type="email" class="form-control" id="email" value=model.email}}
+  </div>
+  <div class="form-group">
+    <label for="groups">Groups</label>
+    <select multiple class="form-control" id="groups" onchange={{action "changeGroups" value="target"}}>
+      {{#each groups as |group|}}
+        <option value="{{group.id}}" selected="{{selected model.groups group}}">{{group.name}}</option>
+      {{/each}}
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="assignment-frequency">Assignment frequency</label>
+    <select class="form-control" id="assignment-frequency" onchange={{action "changeAssignmentFrequency" value="target.value"}}>
+      {{#each assignmentFrequencies as |freq index|}}
+        <option value="{{freq}}" selected="{{if (eq model.assignmentFrequency freq) 'selected'}}">
+          {{#if (eq freq 0)}}
+            As needed
+          {{else}}
+            {{freq}} weeks
+          {{/if}}
+        </option>
+      {{/each}}
+    </select>
+    <span id="helpBlock" class="help-block">Set the minimum timespan between assignments for this person.</span>
+  </div>
+  <!-- <div class="form-group">
+    <label>Unavailable dates</label>
+    <input type="date" class="form-control">
+  </div> -->
+  <div class="form-group">
+    <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
+    <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
+  </div>
 </form>
 
 {{outlet}}
