link to "new" schedule page

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <h1>
   <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedule
-  <button type="button" class="btn btn-primary pull-right">Generate Schedule</button>
+  {{#link-to "schedule" class="btn btn-primary pull-right"}}Generate Schedule{{/link-to}}
 </h1>
 
 {{#if model}}
