Fixed form-group divs

--- a/app/templates/schedule.hbs
+++ b/app/templates/schedule.hbs
@@ -4,9 +4,11 @@
 
 <form>
   <div class="form-group">
-    <label for="name">Start date</label>
+    <label for="start-date">Start date</label>
     <input type="date" class="form-control" id="start-date">
-    <label for="name">End date</label>
+  </div>
+  <div class="form-group">
+    <label for="end-date">End date</label>
     <input type="date" class="form-control" id="end-date">
   </div>
   <div class="form-group">
