actually fixes #8 #7 via @sgmurphy suggestion

--- a/app/templates/group.hbs
+++ b/app/templates/group.hbs
@@ -1,5 +1,5 @@
 <h1>
-  <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Edit Group
+  <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> {{if model.isNew 'Add' 'Edit'}} Group
 </h1>
 
 <form>
