--- a/app/templates/person.hbs
+++ b/app/templates/person.hbs
@@ -1,5 +1,5 @@
 <h1>
-  <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Edit Person
+  <span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{if model.isNew 'Add' 'Edit'}} Person
 </h1>
 
 <form>
