--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -14,8 +14,8 @@
       <ul class="nav navbar-nav">
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        {{#link-to "index" tagName="li" href=false}}
-          {{#link-to "index"}}<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedule{{/link-to}}
+        {{#link-to "schedules" tagName="li" href=false}}
+          {{#link-to "schedules"}}<span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedules{{/link-to}}
         {{/link-to}}
         {{#link-to "people" tagName="li" href=false}}
           {{#link-to "people"}}<span class="glyphicon glyphicon-user" aria-hidden="true"></span> People{{/link-to}}
