--- a/app/templates/schedules/index.hbs
+++ b/app/templates/schedules/index.hbs
@@ -1,6 +1,6 @@
 <h1>
-  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedule
-  {{#link-to "schedule" class="btn btn-primary pull-right"}}Generate Schedule{{/link-to}}
+  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Schedules
+  {{#link-to "schedules.new" class="btn btn-primary pull-right"}}Add Schedule{{/link-to}}
 </h1>
 
 {{#if model}}
