--- a/app/templates/schedules/new.hbs
+++ b/app/templates/schedules/new.hbs
@@ -1,5 +1,5 @@
 <h1>
-  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Generate Schedule
+  <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Add Schedule
 </h1>
 
 <form>
