--- a/app/templates/schedules/new.hbs
+++ b/app/templates/schedules/new.hbs
@@ -4,12 +4,16 @@
 
 <form>
   <div class="form-group">
+    <label for="name">Name</label>
+    {{input type="text" class="form-control" id="name" value=model.name}}
+  </div>
+  <div class="form-group">
     <label for="start-date">Start date</label>
-    <input type="date" class="form-control" id="start-date">
+    {{input type="date" class="form-control" id="start-date" value=model.startDate}}
   </div>
   <div class="form-group">
     <label for="end-date">End date</label>
-    <input type="date" class="form-control" id="end-date">
+    {{input type="date" class="form-control" id="end-date" value=model.endDate}}
   </div>
   <div class="form-group">
     <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
