--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,3 +7,14 @@ h1 .glyphicon, h1 button {
 .table-hover tbody tr {
   cursor: pointer;
 }
+
+/* Print styles */
+@media print {
+  body {
+    padding-top: 0;
+  }
+
+  .btn.print {
+    display: none;
+  }
+}
