--- a/app/templates/people/edit.hbs
+++ b/app/templates/people/edit.hbs
@@ -13,25 +13,25 @@
   </div>
   <div class="form-group">
     <label for="groups">Groups</label>
-    <select multiple class="form-control" id="groups" onchange={{action "changeGroups" value="target"}}>
-      {{#each groups as |group|}}
-        <option value="{{group.id}}" selected="{{selected model.groups group}}">{{group.name}}</option>
-      {{/each}}
-    </select>
+    {{#x-select class="form-control" id="groups" multiple=true value=model.groups as |xs|}}
+    {{#each groups as |group|}}
+      {{#xs.option value=group}}{{group.name}}{{/xs.option}}
+    {{/each}}
+    {{/x-select}}
   </div>
   <div class="form-group">
     <label for="assignment-frequency">Assignment frequency</label>
-    <select class="form-control" id="assignment-frequency" onchange={{action "changeAssignmentFrequency" value="target.value"}}>
-      {{#each assignmentFrequencies as |freq index|}}
-        <option value="{{freq}}" selected="{{if (eq model.assignmentFrequency freq) 'selected'}}">
-          {{#if (eq freq 0)}}
-            As needed
-          {{else}}
-            {{freq}} weeks
-          {{/if}}
-        </option>
-      {{/each}}
-    </select>
+    {{#x-select class="form-control" id="assignment-frequency" value=model.assignmentFrequency as |xs|}}
+    {{#each assignmentFrequencies as |freq|}}
+      {{#xs.option value=freq}}
+        {{#if (eq freq 0)}}
+          As needed
+        {{else}}
+          {{freq}} weeks
+        {{/if}}
+      {{/xs.option}}
+    {{/each}}
+    {{/x-select}}
     <span id="helpBlock" class="help-block">Set the minimum timespan between assignments for this person.</span>
   </div>
   <!-- <div class="form-group">
