--- a/app/templates/groups/edit.hbs
+++ b/app/templates/groups/edit.hbs
@@ -1,6 +1,8 @@
-<h1>
-  <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> {{if model.isNew 'Add' 'Edit'}} Group
-</h1>
+<div class="page-header">
+  <h1>
+    <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> {{if model.isNew 'Add' 'Edit'}} Group
+  </h1>
+</div>
 
 <form>
   <div class="form-group">
