--- a/app/templates/groups/index.hbs
+++ b/app/templates/groups/index.hbs
@@ -1,7 +1,9 @@
-<h1>
-  <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Groups
-  {{#link-to "groups.edit" "new" class="btn btn-primary pull-right"}}Add Group{{/link-to}}
-</h1>
+<div class="page-header">
+  <h1>
+    <span class="glyphicon glyphicon-tag" aria-hidden="true"></span> Groups
+    {{#link-to "groups.edit" "new" class="btn btn-primary pull-right"}}Add Group{{/link-to}}
+  </h1>
+</div>
 
 {{#if model}}
 <table class="table table-hover">
