--- a/app/templates/people/index.hbs
+++ b/app/templates/people/index.hbs
@@ -1,7 +1,9 @@
-<h1>
-  <span class="glyphicon glyphicon-user" aria-hidden="true"></span> People
-  {{#link-to "people.edit" "new" class="btn btn-primary pull-right"}}Add Person{{/link-to}}
-</h1>
+<div class="page-header">
+  <h1>
+    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> People
+    {{#link-to "people.edit" "new" class="btn btn-primary pull-right"}}Add Person{{/link-to}}
+  </h1>
+</div>
 
 {{#if model}}
 <table class="table table-hover">
