--- a/app/templates/settings.hbs
+++ b/app/templates/settings.hbs
@@ -1,4 +1,6 @@
-<h1><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</h1>
+<div class="page-header">
+  <h1><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</h1>
+</div>
 
 <h2>Meeting Dates</h2>
 <form>
