--- a/app/templates/people/edit.hbs
+++ b/app/templates/people/edit.hbs
@@ -36,10 +36,18 @@
     {{/x-select}}
     <span id="helpBlock" class="help-block">Set the minimum timespan between assignments for this person.</span>
   </div>
-  <!-- <div class="form-group">
-    <label>Unavailable dates</label>
-    <input type="date" class="form-control">
-  </div> -->
+  <h2>Unavailable Dates</h2>
+  {{#each model.datesUnavailable as |date|}}
+    <div class="form-group">
+      <div class="input-group">
+        {{input type="date" class="form-control" value=date.date}}
+        <div class="input-group-addon"><a {{action "deleteUnavailableDate" date}} class="glyphicon glyphicon-trash" aria-hidden="true"></a></div>
+      </div>
+    </div>
+  {{/each}}
+  <div class="form-group">
+    <button {{action "addUnavailableDate"}} type="submit" class="btn btn-xs btn-primary">Add Date</button>
+  </div>
   <div class="form-group">
     <button {{action "save"}} type="submit" class="btn btn-primary">Save</button>
     <button {{action "cancel"}} type="button" class="btn btn-link">Cancel</button>
