--- a/app/templates/people/edit.hbs
+++ b/app/templates/people/edit.hbs
@@ -41,7 +41,7 @@
     <div class="form-group">
       <div class="input-group">
         {{input type="date" class="form-control" value=date.date}}
-        <div class="input-group-addon"><a {{action "deleteUnavailableDate" date}} class="glyphicon glyphicon-trash" aria-hidden="true"></a></div>
+        <div class="input-group-btn"><button type="button" {{action "deleteUnavailableDate" date}} class="btn btn-default"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button></div>
       </div>
     </div>
   {{/each}}
