--- a/app/templates/schedules/view.hbs
+++ b/app/templates/schedules/view.hbs
@@ -8,6 +8,8 @@
   </h1>
 </div>
 
+<p class="text-muted">{{model.notes}}</p>
+
 {{#if model.dates.length}}
 <table class="table table-hover">
     <thead>
